Sun Jul  4 18:40:10 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * performance-tests/Protocols/Receiver/ReceiverImpl.ccd
	* performance-tests/Protocols/Receiver/Receiver_svnt.h
	* performance-tests/Protocols/Sender/SenderImpl.ccd
	* performance-tests/Protocols/Sender/Sender_svnt.h:

	  Removed the generated code form the repository. 

Sun Jul  4 11:14:03 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* DAnCE/ciao/CCM_Core.mpc:

	  Restructured things so that CIAO_DnC_Server doesn't need to be
	  linked with stub projects. 
	
	* DAnCE/ciao/Container_Base.h:

	  Added an include for the xport file. 
	
Sun Jul  4 10:17:52 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* DAnCE/ciao/CCM_Core.mpc:

	  The deployment_stub should depend on the CIAO_DnC_Server. This
	  would need some restructuring. I will do this shortly. 

Sun Jul  4 09:07:20 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* CIAO.mwc:

	  Added DAnCE and removed DnC

	* DAnCE/RepositoryManager/Repository_Manager.cpp:	
	* DAnCE/ExecutionManager/Execution_Manager.cpp:

	  Fixed warnings in our daily builds. 
	
	* DAnCE/NodeManager/NodeDaemon.mpc:

	  Use CIAO_DnC_Server instead of  CIAO_Server.

	* DAnCE/ciao/CCM_Core.mpc:

	  Removed unneeded dependancies. 
	
Sat Jul  3 10:03:22 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DAnCE/ciao/Deployment_Base.idl:
	* DAnCE/ciao/Deployment_Data.idl:
	* DAnCE/ciao/Deployment.idl:
	  The original Deployment.idl is splited into the above 3 files to
	  get rid of the VC warning.

	* DAnCE/ciao/Deployment_Ex.idl:
	  This file is removed due to the bad name.

	* DAnCE/ciao/CCM_Core.idl:
	  The MPC file is changed to follow the above changes.

Thu Jul  1 16:27:07 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * CIAOTAO.mwc:
        * DAnCE/tests/Config_Handlers/handler_test.mpb:

          Updated mpc to build the new DAnCE directory.

Thu Jul  1 16:19:21 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        *