@@ -1,3 +1,15 @@
+Sun Jul  4 18:59:09 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+ 	* examples/Hello/Receiver/Receiver_exec.cpp:
+	* examples/OEP/BasicSP/BMClosedED/BMClosedED_exec.cpp:
+	* examples/OEP/BasicSP/BMDevice/BMDevice_exec.cpp:
+	* examples/OEP/BasicSP/BMDisplay/BMDisplay_exec.cpp:
+	* examples/OEP/Display/NavDisplay/NavDisplay_exec.cpp:
+	* examples/OEP/Display/NavDisplayGUI_exec/NavDisplayGUI_exec.cpp:
+
+	  No need to register value factories explicitly. They are now
+	  generated in the servant code.
+
 Sun Jul  4 18:40:10 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
         * performance-tests/Protocols/Receiver/ReceiverImpl.ccd
